Correction layout bug affichage

--- a/webroot/css/template.css
+++ b/webroot/css/template.css
@@ -1,3 +1,86 @@
+body {
+margin : 0;
+padding : 0;
+background-color : #14111e;
+padding-top : 20px;
+min-width : 850px;
+}
+/*Header et Menu*/
+header {
+	width : 100%;
+	height : 130px;
+	text-align: center;
+	margin-bottom: 40px;
+}
+figure.header_left {
+	margin-right : 140px ;
+	display : inline-block;
+}
+figure.header_right {
+	margin-left : 140px ;
+	display : inline-block;
+}
+
+nav {
+width :100%;
+background-image : url("../img/menu/bandeau_menu.png");
+height : 35px;
+}
+nav ul {
+list-style-type:none;
+}
+nav ul li {
+display: inline-block;
+font-size : 22px;
+vertical-align : top;
+padding-right : 7px;
+padding-left : 7px;
+}
+nav ul li a {
+font-style : none;
+color : #222222;
+}
+
+#logo {
+	margin-top : -20px;
+}
+#sortie {
+	float : right;
+	margin-top : -10px;
+	font-size : 20px;
+
+}
+/*Fin header et menu*/
+/*Footer*/
+footer {
+position : relative;
+bottom : 0px;
+background-image:linear-gradient(#6e0b14, #1A0000);
+/*background-color : #6e0b14;*/
+border-top : 3px solid;
+border-color : black;
+height : 190px;
+}
+footer p {
+	color : #ffba00;
+}
+#information {
+	margin : 20px;
+}
+#information p{
+	margin : 0;
+}
+
+#copyright {
+position : absolute;
+bottom : 0px;
+margin : 0px;
+width : 100%;
+text-align: center;
+background-color: #222222;
+color : #9f9f9f;
+}
+/*Fin Footer*/
 
 aside.details {
 background-color :  #DE8B0E;
@@ -5,50 +88,6 @@ border : dotted 2px;
 border-color : #e76a00;
 width : 300px;
 padding : 20px;
-}
-
-body {
-margin : 0;
-padding : 0;
-background-color : #14111e;
-padding-top : 20px;
-min-width : 800px;
-}
-
-footer {
-background-image:linear-gradient(#6e0b14, #1A0000);
-/*background-color : #6e0b14;*/
-border-top : 3px solid;
-border-color : black;
-padding : 20px;
-height : 200px;
-}
-
-footer p {
-	color : #ffba00;
-}
-#logo {
-	margin-top : -20px;
-}
-#sortie {
-	float : right;
-	margin-top : -10px;
-}
-#authors {
-width: 50%;
-}
-
-#information {
-float : left;
-display : inline-block;
-width: 50%;
-}
-
-#copyright {
- margin : 0px;
- width : 100%;
- text-align: center;
- position : relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -86,51 +125,13 @@ color : #202020;
 color : #fff;
 }
 
-header {
-	width : 100%;
-	height : 130px;
-	text-align: center;
-	margin-bottom: 40px;
-}
 
 p {
 font-family: Arial;
 color : #202020;
 }
 
-figure.header_left {
-	margin-right : 130px ;
-	display : inline-block;
-}
 
-figure.header_right {
-	margin-left : 130px ;
-	display : inline-block;
-}
-
-nav {
-width :100%;
-background-image : url("../img/menu/bandeau_menu.png");
-height : 35px;
-}
-
-nav ul li a {
-font-style : none;
-font-size : 28px;
-margin : 0px;
-color : black;
-}
-
-nav ul {
-list-style-type:none;
-text-align : center;
-}
-
-nav ul li {
-display: inline-block;
-width : 150px;
-vertical-align : top;
-}
 
 section.cadre_gris {
 border: 5px solid;
